--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <p>Minimum Stake amount: </p><div id="minStakeAmount"></div>
         <p>Total Sale staked: </p><div id="totalSaleStaked"></div>
+        <p>Your Sale staked: </p><div id="mySaleStaked"></div>
         <p>Total Sale burned by staking: </p><div id="totalSaleBurned"></div>
         <p>Your rewards available: </p><div id="availableRewards"></div>
         <p>Approval Status: </p><div id="approvalRequired"></div>
